[gd_scene load_steps=7 format=3 uid="uid://cu24ohi6xxko3"]

[ext_resource type="Script" path="res://Scripts/Microgames/Cutting/Beat.gd" id="1_m6eni"]
[ext_resource type="Texture2D" uid="uid://b1g0onhyghygr" path="res://Assets/Microgames/Minigame UI/timingIndicator.png" id="1_p3ww1"]
[ext_resource type="Texture2D" uid="uid://dljja3fb11umx" path="res://Assets/Microgames/Minigame UI/timingBad.png" id="3_uqxfq"]
[ext_resource type="Texture2D" uid="uid://bbd6j6dp4ev57" path="res://Assets/Microgames/Minigame UI/timingGood.png" id="4_xpfvp"]
[ext_resource type="Texture2D" uid="uid://dah0gm2teyya3" path="res://Assets/Microgames/Minigame UI/timingPerfect.png" id="5_i3p3a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tu2ge"]
radius = 6.06432
height = 118.597

[node name="Beat" type="Node2D"]
script = ExtResource("1_m6eni")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(-224, -51)
texture = ExtResource("1_p3ww1")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-2, -2)
rotation = -0.122173
shape = SubResource("CapsuleShape2D_tu2ge")

[node name="BadSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_uqxfq")

[node name="GoodSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_xpfvp")

[node name="PerfectSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_i3p3a")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
